--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^13.1.1",
     "classnames": "^2.2.5",
+    "gulp": "^3.9.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "ts-loader": "^1.3.2"
+    "ts-loader": "^1.3.2",
+    "tsify": "^2.0.3",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
